<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="spotify_title">Spotify Streamer</string>
    <string name="app_title">My Nano Degree Apps!</string>
    <string name="scoreapp_title">Score App</string>
    <string name="libratyapp_title">Libraty App</string>
    <string name="buildItBiger_title">Build IT Bigger</string>
    <string name="capstone_title">Capstone: My Own App</string>
    <string name="xyzreader_title">XYZ Reader</string>
    <string name="size">30dp</string>
    <string name="button_testsize">18dp</string>
</resources>
