<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_titleId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textStyle="bold"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_centerHorizontal="true">
    </TextView>

    <Button
            android:id="@+id/spotifyButton"
            android:layout_height="@dimen/layout_height_dp"
            android:layout_width="@dimen/layout_width_dp"
            android:text="@string/spotify_title"
            android:background="@color/buttonBackground"
            android:layout_below="@+id/app_titleId"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top"/>
    <Button
            android:id="@+id/scoreappButton"
            android:layout_height="@dimen/layout_height_dp"
            android:layout_width="@dimen/layout_width_dp"
            android:text="@string/scoreapp_title"
            android:background="@color/buttonBackground"
            android:layout_below="@+id/spotifyButton"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top"/>
    <Button
            android:id="@+id/libraryappButton"
            android:layout_height="@dimen/layout_height_dp"
            android:layout_width="@dimen/layout_width_dp"
            android:text="@string/libratyapp_title"
            android:background="@color/buttonBackground"
            android:layout_below="@+id/scoreappButton"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top"/>
    <Button
            android:id="@+id/buildItBiggerButton"
            android:layout_height="@dimen/layout_height_dp"
            android:layout_width="@dimen/layout_width_dp"
            android:text="@string/buildItBiger_title"
            android:background="@color/buttonBackground"
            android:layout_below="@+id/libraryappButton"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top"/>
    <Button
            android:id="@+id/xyzReaderButton"
            android:layout_height="@dimen/layout_height_dp"
            android:layout_width="@dimen/layout_width_dp"
            android:text="@string/xyzreader_title"
            android:background="@color/buttonBackground"
            android:layout_below="@+id/buildItBiggerButton"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top"/>
    <Button
            android:id="@+id/capstoneButton"
            android:layout_height="@dimen/layout_height_dp"
            android:layout_width="@dimen/layout_width_dp"
            android:text="@string/capstone_title"
            android:background="@color/buttonBackground"
            android:layout_below="@+id/xyzReaderButton"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top"/>

</RelativeLayout>
